Wed Jun 22 13:19:39 2005  George Lebl <jirka@5z.com>

	* src/eval.[ch], src/symbolic.c: Add more aggressive "simplification"
	  and use it on the result of derivation (for example multiplication
	  by 1 or addition of 0 and such are now whacked)

Fri Jun 17 09:56:34 2005  George Lebl <jirka@5z.com>

	* src/parse.y: fix precedence of .+ and .- and also move 'call' in
	  precedence further to the top to bind more closely then =
	  make things like "x = f call (x)" work as you would expect.

	* lib/misc/misc.gel: add ComposePower

	* help/C/gel-functions-list.xml: add ComposePower docs

	* src/eval.c: in try_to_do_precalc, whack all double negations

	* src/symbolic.c: fix derivation of divisions, and make ln have
	  derivative of "x^-1" rather then "1/x" as we can take multiple
	  derivatives better there since we have no real simplification

Thu Jun 16 18:14:39 2005  George Lebl <jirka@5z.com>

	* lib/symbolic/differentiation.gel:  Add SymbolicNthDerivative,
	  SymbolicNthDerivativeTry, SymbolicTaylorApproximationFunction

	* configure.in, help/C/gel-function-list.xml, help/C/genius.xml:
	  Document the above

	* src/geniustests.txt: add some tests

Thu Jun 16 17:40:29 2005  George Lebl <jirka@5z.com>

	* configure.in: raise version number

	* src/complil.c: compile symbolic_id and id for function nodes and
	  symbolic_id for global functions.

	* src/lexer.l, src/calc.c, src/eval.[ch], src/parse.y: SYNTAX CHANGE:
	  there is now an elt by elt addition and subtraction (.+ and .-)
	  which act like the old +,- when adding scalar to a matrix.  The +,-
	  now interpret A+x as A+x*I if A is a square matrix, and elt by elt
	  if A is a vector (row or column), else they error out.

	* src/funclib.c: the PolyToFunction now does 1 instead of x^0, since
	  this now works correctly for matrices.

	* src/lexer.l, src/calc.c, src/parse.y: make evalstack into
	  gel_parsestack since the naming was totally off

	* src/dict.h: on decompilation errors don't assert crash, just give