@@ -1,3 +1,11 @@
+Fri Jun 24 15:42:09 2005  George Lebl <jirka@5z.com>
+
+	* src/mpwrap.[ch]: add symbolic equality (respects types)
+
+	* src/eval.[ch]: further simplification of multiplication and
+	  addition, still crap, but lesser crap now.  I need to make this
+	  more general and nicer.
+
 Wed Jun 22 13:19:39 2005  George Lebl <jirka@5z.com>
 
 	* src/eval.[ch], src/symbolic.c: Add more aggressive "simplification"
